--- a/atom.symlink/styles.less
+++ b/atom.symlink/styles.less
@@ -1,3 +1,8 @@
 .editor {
   -webkit-font-smoothing: antialiased;
 }
+atom-text-editor::shadow .wrap-guide {
+  width: 1px;
+  background-color: grey;
+  opacity: 0.5
+}
